--- a/src/App.scss
+++ b/src/App.scss
@@ -1,40 +1,341 @@
-#main-header {
-  width: 100%;
+// Cyborg 4.3.1
+// Bootswatch
+@import "style/variables";
+@import "../node_modules/bootstrap/scss/bootstrap";
 
-  .title-logo {
-    height: 50px;
-    margin: 0.25em;
+// Variables ===================================================================
+
+$web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxygen:400,700" !default;
+@import url($web-font-path);
+
+.shane-preater {
+  background-color: $black;
+
+  .content {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+
+  p, li {
+    color: $gray-500;
+  }
+
+  .parallax {
+    height: 80%;
+  }
+
+  .parallax-cover-section {
+    background-color: $body-bg;
+    opacity: 1;
+  }
+
+  .hard-back {
+    background-color: $body-bg;
+    z-index: 10;
+  }
+
+    .media-icon {
+        font-size: 3em;
+        color: $primary;
+    }
+}
+
+.icon {
+  margin-top: 1.5em;
+  font-size: xx-large;
+  line-height: 1.5rem;
+}
+
+img.company {
+  max-height: 50px;
+}
+
+section {
+  margin-bottom: 1em;
+}
+
+// Navbar ======================================================================
+
+.navbar {
+
+  &.bg-primary {
+    border: 1px solid $gray-700;
+  }
+
+  &.bg-dark {
+    background-color: $body-bg !important;
+    border: 1px solid $gray-700;
+  }
+
+  &.bg-light {
+    background-color: $gray-500 !important;
+  }
+
+  &.fixed-top {
+    border-width: 0 0 1px 0;
+  }
+
+  &.fixed-bottom {
+    border-width: 1px 0 0 0;
+  }
+
+}
+
+// Buttons =====================================================================
+
+.btn {
+  @each $color, $value in $theme-colors {
+    &-#{$color} {
+      @if $enable-gradients {
+        background: $value linear-gradient(180deg, mix($white, $value, 15%), $value) repeat-x;
+      } @else {
+        background-color: $value;
+      }
+    }
   }
 }
 
-.navbar-toggle {
-  background-color: white
+// Typography ==================================================================
+
+// Tables ======================================================================
+
+table {
+  color: #fff;
 }
 
-#main-content {
-  min-height: 100px;
-  display: block;
-}
+.table {
 
-#main-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-
-  .align-center {
-    text-align: center;
+  &-primary {
+    &, > th, > td {
+      background-color: $primary;
+    }
   }
 
-  .align-end {
-    text-align: end;
+  &-secondary {
+    &, > th, > td {
+      background-color: $secondary;
+    }
+  }
+
+  &-light {
+    &, > th, > td {
+      background-color: $light;
+    }
+  }
+
+  &-dark {
+    &, > th, > td {
+      background-color: $dark;
+    }
+  }
+
+  &-success {
+    &, > th, > td {
+      background-color: $success;
+    }
+  }
+
+  &-info {
+    &, > th, > td {
+      background-color: $info;
+    }
+  }
+
+  &-danger {
+    &, > th, > td {
+      background-color: $danger;
+    }
+  }
+
+  &-warning {
+    &, > th, > td {
+      background-color: $warning;
+    }
+  }
+
+  &-active {
+    &, > th, > td {
+      background-color: $table-active-bg;
+    }
+  }
+
+  &-hover {
+
+    .table-primary:hover {
+      &, > th, > td {
+        background-color: darken($primary, 5%);
+      }
+    }
+
+    .table-secondary:hover {
+      &, > th, > td {
+        background-color: darken($secondary, 5%);
+      }
+    }
+
+    .table-light:hover {
+      &, > th, > td {
+        background-color: darken($light, 5%);
+      }
+    }
+
+    .table-dark:hover {
+      &, > th, > td {
+        background-color: darken($dark, 5%);
+      }
+    }
+
+    .table-success:hover {
+      &, > th, > td {
+        background-color: darken($success, 5%);
+      }
+    }
+
+    .table-info:hover {
+      &, > th, > td {
+        background-color: darken($info, 5%);
+      }
+    }
+
+    .table-danger:hover {
+      &, > th, > td {
+        background-color: darken($danger, 5%);
+      }
+    }
+
+    .table-warning:hover {
+      &, > th, > td {
+        background-color: darken($warning, 5%);
+      }
+    }
+
+    .table-active:hover {
+      &, > th, > td {
+        background-color: $table-active-bg;
+      }
+    }
+
   }
 }
 
-.container-row {
-  border: 1px solid red
+// Forms =======================================================================
+
+legend {
+  color: #fff;
 }
 
-.left-gutter {
-  border: 1px solid green
+// Navs ========================================================================
+
+.nav-tabs,
+.nav-pills {
+  .nav-link {
+    color: #fff;
+
+    &:hover {
+      background-color: $gray-700;
+    }
+
+    &.disabled,
+    &.disabled:hover {
+      background-color: transparent;
+      color: $nav-link-disabled-color;
+    }
+
+    &.active {
+      background-color: $primary;
+    }
+  }
+}
+
+.breadcrumb {
+  a {
+    color: #fff;
+  }
+}
+
+.pagination {
+  a:hover {
+    text-decoration: none;
+  }
+}
+
+// Indicators ==================================================================
+
+.alert {
+  border: none;
+  color: $white;
+
+  a,
+  .alert-link {
+    color: #fff;
+    text-decoration: underline;
+  }
+
+  @each $color, $value in $theme-colors {
+    &-#{$color} {
+      @if $enable-gradients {
+        background: $value linear-gradient(180deg, mix($white, $value, 15%), $value) repeat-x;
+      } @else {
+        background-color: $value;
+      }
+    }
+  }
+
+  &-light {
+    &,
+    & a,
+    & .alert-link {
+      color: $body-bg;
+    }
+  }
+}
+
+.badge {
+  &-warning {
+    color: $white;
+  }
+}
+
+.close {
+  opacity: 0.6;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+// Progress bars ===============================================================
+
+// Containers ==================================================================
+
+.list-group-item {
+  &:hover {
+    background-color: $gray-700;
+    color: #fff;
+  }
+
+  &-action {
+    color: $gray-500;
+
+    .list-group-item-heading {
+      color: $gray-500;
+    }
+  }
+
+  &:hover .list-group-item-heading {
+    color: #fff;
+  }
+}
+
+.card,
+.list-group-item {
+  h1, h2, h3, h4, h5, h6 {
+    color: inherit;
+  }
+}
+
+.popover {
+  &-title {
+    border-bottom: none;
+  }
 }
