--- a/src/Footer.scss
+++ b/src/Footer.scss
@@ -2,11 +2,19 @@
 
 footer {
   font-size: small;
-  h1,h2,h3,h4,h5 {
+
+  h1, h2, h3, h4, h5 {
     font-size: small;
     color: $gray-300;
   }
+
   span {
     color: $gray-500;
+  }
+
+  .disclaimer {
+    p,li,span {
+      color: $white;
+    }
   }
 }
