Finished integrating the blog sub system.
We are ready for official launch.
Outstanding items:
1. Filtering blog doesn't work :-(
2. Layout of publish block is not far enough right.
3. Terms of use needs to be completed. It currently just shows the disclaimer again.

--- a/src/App.scss
+++ b/src/App.scss
@@ -383,6 +383,17 @@ legend {
   }
 }
 
+.post.preview > .small {
+  text-align: end;
+}
+
+.post-content {
+  h1,h2,h3,h4,h5,h6 {
+    color: $white;
+    font-size: small;
+  }
+}
+
 form, label, p, span, li {
   color: $gray-300;
 }
