--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxyg
 
 .shane-preater {
   background-color: $black;
+  max-width: 1024px;
 
   nav.navbar {
     z-index: 2;
@@ -28,18 +29,11 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxyg
     color: $gray-500;
   }
 
-  .parallax {
-    height: 80%;
-  }
-
-  .parallax-cover-section {
-    background-color: $body-bg;
-    opacity: 1;
-  }
-
-  .hard-back {
-    background-color: $body-bg;
-    z-index: 10;
+  .section-header {
+    width: 100%;
+    img {
+      max-width: 100%;
+    }
   }
 
   .media-icon {
@@ -65,6 +59,12 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxyg
 
     p, li {
       color: $gray-300;
+    }
+  }
+
+  .post-preview {
+    margin-bottom: 0.5em;
+    .card-header {
     }
   }
 }
