Created more details for design and develop
Also it looks like prettier hadn't finished when I pushed last.

--- a/src/Footer.scss
+++ b/src/Footer.scss
@@ -3,7 +3,11 @@
 footer {
   font-size: small;
 
-  h1, h2, h3, h4, h5 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
     font-size: small;
     color: $gray-300;
   }
@@ -13,7 +17,9 @@ footer {
   }
 
   .disclaimer {
-    p,li,span {
+    p,
+    li,
+    span {
       color: $white;
     }
   }
