--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,9 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxyg
     padding-right: 0.5em;
   }
 
-  p, li, label {
+  p,
+  li,
+  label {
     color: $gray-500;
   }
 
@@ -53,11 +55,16 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxyg
   }
 
   .markdown-container {
-    h1, h2, h3, h4, h5 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
       color: $white;
     }
 
-    p, li {
+    p,
+    li {
       color: $gray-300;
     }
   }
@@ -72,13 +79,17 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxyg
 .model-body {
   color: $white;
 
-  p, span, li {
+  p,
+  span,
+  li {
     color: $white;
   }
 }
 
 .disclaimer {
-  p, li, span {
+  p,
+  li,
+  span {
     color: $gray-300;
   }
 }
@@ -100,7 +111,6 @@ section {
 // Navbar ======================================================================
 
 .navbar {
-
   &.bg-primary {
     border: 1px solid $gray-700;
   }
@@ -121,7 +131,6 @@ section {
   &.fixed-bottom {
     border-width: 1px 0 0 0;
   }
-
 }
 
 // Buttons =====================================================================
@@ -130,7 +139,9 @@ section {
   @each $color, $value in $theme-colors {
     &-#{$color} {
       @if $enable-gradients {
-        background: $value linear-gradient(180deg, mix($white, $value, 15%), $value) repeat-x;
+        background: $value
+          linear-gradient(180deg, mix($white, $value, 15%), $value)
+          repeat-x;
       } @else {
         background-color: $value;
       }
@@ -147,117 +158,150 @@ table {
 }
 
 .table {
-
   &-primary {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $primary;
     }
   }
 
   &-secondary {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $secondary;
     }
   }
 
   &-light {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $light;
     }
   }
 
   &-dark {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $dark;
     }
   }
 
   &-success {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $success;
     }
   }
 
   &-info {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $info;
     }
   }
 
   &-danger {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $danger;
     }
   }
 
   &-warning {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $warning;
     }
   }
 
   &-active {
-    &, > th, > td {
+    &,
+    > th,
+    > td {
       background-color: $table-active-bg;
     }
   }
 
   &-hover {
-
     .table-primary:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($primary, 5%);
       }
     }
 
     .table-secondary:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($secondary, 5%);
       }
     }
 
     .table-light:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($light, 5%);
       }
     }
 
     .table-dark:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($dark, 5%);
       }
     }
 
     .table-success:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($success, 5%);
       }
     }
 
     .table-info:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($info, 5%);
       }
     }
 
     .table-danger:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($danger, 5%);
       }
     }
 
     .table-warning:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: darken($warning, 5%);
       }
     }
 
     .table-active:hover {
-      &, > th, > td {
+      &,
+      > th,
+      > td {
         background-color: $table-active-bg;
       }
     }
-
   }
 }
 
@@ -317,7 +361,9 @@ legend {
   @each $color, $value in $theme-colors {
     &-#{$color} {
       @if $enable-gradients {
-        background: $value linear-gradient(180deg, mix($white, $value, 15%), $value) repeat-x;
+        background: $value
+          linear-gradient(180deg, mix($white, $value, 15%), $value)
+          repeat-x;
       } @else {
         background-color: $value;
       }
@@ -372,7 +418,12 @@ legend {
 
 .card,
 .list-group-item {
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     color: inherit;
   }
 }
@@ -388,12 +439,21 @@ legend {
 }
 
 .post-content {
-  h1,h2,h3,h4,h5,h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     color: $white;
     font-size: small;
   }
 }
 
-form, label, p, span, li {
+form,
+label,
+p,
+span,
+li {
   color: $gray-300;
 }
