bug: fixing amazon links

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,11 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Montserrat:400,700|Oxyg
     }
   }
 
+  .section-footer {
+    margin-top: 5em;
+    margin-bottom: 10em;
+  }
+
   .media-icon {
     font-size: 3em;
     color: $primary;
